# snake_game

./: .gitignore  Makefile  README.md  config.json  pyproject.toml
.github/workflows/: unit_test_ci.yml
documentation/: NOTIONS.md
documentation/template_doc/: TEMPLATE.md
src/: main.py
src/app/: main.py
src/core/: food.py  grid.py  snake.py
src/utils/: config_loader.py  handle_input.py  math_helpers.py
src/views/: game.py  game_over.py  grid.py  level_selection.py  menu.py
tests/: test_math_helpers.py
