[project]
name = "template-42-project"
version = "0.1.0"
description = "A standard 42 Python project template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
